--- a/proyect.css
+++ b/proyect.css
@@ -1,3 +1,89 @@
-.letrapequeña{
-    font-size: 12px;
+.boton
+{
+    padding-top: 0px;
+    padding-bottom: 0px;
+    border-radius: 20px 20px 20px 20px;
+    background-color: #DCDCDC;
+    border: none;
+}
+
+.menu_left
+{
+    border-right: 1px solid #ccc;
+    position:fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    background-color: white;
+}
+
+
+.centro
+{
+    position: absolute;
+    width: 75%;
+}
+
+.extremoIzq
+{
+    left: 0px;
+    width: 5%;
+}
+
+.extremoDer
+{
+    position:relative;
+    right: 0px;
+    left: 80%;
+    bottom: 0;
+    width: 30%;
+    border-left: 1px solid #ccc;
+}
+
+.smallest_letter
+{
+    font-size: 10px;
+}
+
+
+
+@media only screen and (min-width: 1080px) 
+{
+    .xbars 
+    {
+       display: none !important;
+    }
+}
+
+@media only screen and (min-width: 728px) 
+{
+    .openBton 
+    {
+       display: none !important;
+       color: green !important;
+    }
+   
+}
+
+@media only screen and (max-width: 728px) 
+{
+    .redimencionar_img
+    {
+        width:56px !important; 
+        height:56px !important;
+    }
+
+    .select 
+    {
+        display: none !important;
+    }
+}
+
+@media only screen and (max-width: 1080px) 
+{
+    .deskBar 
+    {
+       display: none !important;
+    }
+  
 }
