--- a/write.css
+++ b/write.css
@@ -1,10 +1,46 @@
 
-
-/*# sourceMappingURL=write.css.map */
 #carouselExampleDark{
     margin-top: 50px;
 }
 .form-floating p{
     font-size: 30px;
+}
 
+.menu{
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    background-color: white;
+}
+
+.logomedium{
+    width: 50px;
+    height: 50px;
+
+}
+
+.useraccnt{
+    display: flex;
+    justify-content: left;
+    align-items: stretch;
+}
+
+.btn{
+    padding: 10px;
+    height: 30px;
+    font-size: 18px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
+
+
+.bell{
+    padding: 15px;
+}
+
+.avatar{
+    width: 35px;
+    height: 35px;
 }
