--- a/proyect.css
+++ b/proyect.css
@@ -17,6 +17,11 @@
     background-color: white;
 }
 
+.avatar {
+    border: none;
+    border-radius: 50%;
+    background-color: #fff;
+}
 
 .centro
 {
