--- a/proyect.css
+++ b/proyect.css
@@ -61,11 +61,49 @@
     font-size: 30px;
 }
 
-.textarea 
+.list_cicle_small
 {
-    width: 150px;
-    height: 150px;
+    width:150px;
+    height:150px;
+    top: -40px;
+    left: -60px;
+
+    position: relative;
+    background-color: white;
+
 }
+
+.list_circle
+{
+    width:300px;
+    height:300px;
+    background-color: white;
+    position: relative;
+    top: -60px;
+    left: 160px;
+    opacity: 25%;
+   
+}
+
+.banner_left
+{
+    width:70%;
+}
+
+
+
+.banner{
+
+    width: 100%;
+    height: 300px;
+    
+}
+
+.close
+{
+    color: white;
+}
+
 
 
 @media only screen and (min-width: 1080px) 
