--- a/css/proyect.css
+++ b/css/proyect.css
@@ -29,11 +29,6 @@
     width: 75%;
 }
 
-.extremoIzq
-{
-    left: 0px;
-    width: 5%;
-}
 
 .extremoDer
 {
@@ -44,6 +39,8 @@
     width: 30%;
     border-left: 1px solid #ccc;
 }
+
+
 
 .smallest_letter
 {
@@ -65,7 +62,7 @@
 {
     width:150px;
     height:150px;
-    top: -40px;
+    top: -140px;
     left: -60px;
 
     position: relative;
@@ -79,8 +76,31 @@
     height:300px;
     background-color: white;
     position: relative;
-    top: -60px;
+    top: -160px;
     left: 160px;
+    opacity: 25%;
+   
+}
+
+.list_cicle_small_mobile
+{
+    width:100px;
+    height:50px;
+ top:-30px;
+
+    position: relative;
+    background-color: white;
+
+}
+
+.list_circle_mobile
+{
+    width:200px;
+    height:100px;
+    background-color: white;
+    position: relative;
+    top: -30px;
+    right: -60px;
     opacity: 25%;
    
 }
@@ -90,14 +110,27 @@
     width:70%;
 }
 
+.start-mobile
+{
+    position: relative;
+    top: -40px;
+    width: 300px;
+}
 
+.start
+{
+    position: relative;
+    top: -120px;
+   
+}
 
 .banner{
 
     width: 100%;
-    height: 300px;
+    height: 200px;
     
 }
+
 
 .close
 {
